macros/tests/ui/declare/circular_dependency_fail.stderr
error: There is a directly circle depends exist, this will cause infinite loop: id3.size ~> id1 , id2.size ~> id3 , id1.size ~> id2
  --> tests/ui/declare/circular_dependency_fail.rs:7:13
   |
7  |         id: id1,
   |             ^^^
8  |         size: id2.size,
   |         ^^^^  ^^^
...
11 |         id: id2,
   |             ^^^
12 |         size: id3.size,
   |         ^^^^  ^^^
...
15 |         id: id3,
   |             ^^^
16 |         size: id1.size,
   |         ^^^^  ^^^
   |
note: You should manual watch to break circle, subscribe only if the value really changed.
       `let_watch!(...).distinct_until_changed().subscribe(...)`

  --> tests/ui/declare/circular_dependency_fail.rs:8:9
   |
8  |         size: id2.size,
   |         ^^^^
...
12 |         size: id3.size,
   |         ^^^^
...
16 |         size: id1.size,
   |         ^^^^

error: There is a directly circle depends exist, this will cause infinite loop: parent.margin ~> child , child.margin ~> parent
  --> tests/ui/declare/circular_dependency_fail.rs:23:11
   |
23 |       id: parent,
   |           ^^^^^^
24 |       size: Size::zero(),
25 |       margin: child.margin.clone(),
   |       ^^^^^^  ^^^^^^^^^^^^
26 |       SizedBox{
27 |         id: child,
   |             ^^^^^
28 |         size: Size::zero(),
29 |         margin: parent.margin.clone(),
   |         ^^^^^^  ^^^^^^^^^^^^^
   |
note: You should manual watch to break circle, subscribe only if the value really changed.
       `let_watch!(...).distinct_until_changed().subscribe(...)`

  --> tests/ui/declare/circular_dependency_fail.rs:25:7
   |
25 |       margin: child.margin.clone(),
   |       ^^^^^^
...
29 |         margin: parent.margin.clone(),
   |         ^^^^^^
